--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ ruff = "^0.5.5"
 ipykernel = "^6.29.5"
 deptry = "^0.18.0"
 mypy = "^1.11.1"
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
