--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ langchain-openai = "^0.1.20"
 langchain-text-splitters = "^0.2.2"
 python-dotenv = "^1.0.1"
 watchdog = "^4.0.1"
+langchain-voyageai = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.5"
