--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ langchain-text-splitters = "^0.2.2"
 python-dotenv = "^1.0.1"
 watchdog = "^4.0.1"
 langchain-voyageai = "^0.1.1"
+sqlite-vec = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.5"
